--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,11 @@
   <meta charset="utf-8">
   <title>Flight Dot Booking Website</title>
   <base href="/">
+  <meta property="og:title" content="Your Page Title">
+    <meta property="og:description" content="A brief description of your page content.">
+    <meta property="og:image" content="https://www.example.com/path/to/your/image.jpg">
+    <meta property="og:url" content="https://www.example.com/page-url">
+    <meta property="og:type" content="website">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
