update meta home page

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,15 @@
   <meta charset="utf-8">
   <title>Flight Dot Booking Website</title>
   <base href="/">
-  <meta property="og:title" content="Your Page Title">
-    <meta property="og:description" content="A brief description of your page content.">
-    <meta property="og:image" content="https://www.example.com/path/to/your/image.jpg">
-    <meta property="og:url" content="https://www.example.com/page-url">
+    <meta property="og:title" content="FlightDot - Đặt vé máy bay">
+    <meta property="og:description" content="Website đặt vé máy bay FlightDot">
+    <meta property="og:image" content="src\assets\icons8-plane-48.png">
+    <meta property="og:alt" content="hình ảnh">
+    <meta property="og:image:width" content="100">
+    <meta property="og:image:height" content="130">  
+    <meta property="og:url" content="">
     <meta property="og:type" content="website">
+    <meta property="keywords" content="angular, SEO flightdot, flightdot, tmdt flightdot">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
