--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
     <meta property="og:title" content="FlightDot - Đặt vé máy bay">
     <meta property="og:description" content="Website đặt vé máy bay FlightDot">
-    <meta property="og:image" content="src\assets\icons8-plane-48.png">
+    <meta property="og:image" content="src/assets/icons8-plane-48.png">
     <meta property="og:alt" content="hình ảnh">
     <meta property="og:image:width" content="100">
     <meta property="og:image:height" content="130">  
