update floating icon chat messenger

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
   var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
   s1.async=true;
   s1.src='https://live-tawk.vievent.net/66a1b0f3becc2fed692ab1cc/1i3jpmeer';
+  //s1.src='https://embed.tawk.net/66a1b0f3becc2fed692ab1cc/1i3jpmeer';
+
   s1.charset='UTF-8';
   s1.setAttribute('crossorigin','*');
   s0.parentNode.insertBefore(s1,s0);
