update gg sreach console

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Flight Dot Booking Website</title>
   <base href="/">
+  <meta name="google-site-verification" content="_QlkTsUqMuJjFGs_jt39URxSn5R6AM-txg_Oyrll3xw" />
     <meta property="og:title" content="FlightDot - Đặt vé máy bay">
     <meta property="og:description" content="Website đặt vé máy bay FlightDot">
     <meta property="og:image" content="https://i.imgur.com/z5UKe3U.png">
