--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website">
     <meta property="keywords" content="angular, SEO flightdot, flightdot, tmdt flightdot">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="icon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/icon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
