--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <meta property="og:url" itemprop="url" content="https://flightdotclient.azurewebsites.net/home" />
   <meta property="og:title" content="FlightDot - Đặt Vé Máy Bay Online - Nhanh Chóng, Tiện Lợi, Giá Tốt" />
   <meta property="og:description" content="Website đặt vé máy bay - FlightDot tiện lợi và nhanh chóng, giúp bạn tìm kiếm, so sánh giá vé, và đặt chỗ chỉ trong vài bước đơn giản. Với giao diện thân thiện và hỗ trợ 24/7, chúng tôi mang đến trải nghiệm mua vé dễ dàng và an toàn cho mọi chuyến bay của bạn." />
-  <meta property="og:image" content="https://imgur.com/WaACbcs" />
+  <meta property="og:image" content="https://i.imgur.com/WaACbcs.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/icon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
