--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
     "@context": "https://schema.org",
     "@type": "Article",
     "headline": "Website FlightDot đặt vé máy bay tiện lợi - nhanh chóng - uy tín - chất lượng",
-    "description": "Chào mừng bạn đến với FlightDot, nơi bạn có thể yên tâm đặt vé máy bay vô cùng nhanh chóng và tiện lợi, cùng với đội ngũ chăm sóc khách hàng tậm tâm, chu đáo.",
+    "description": "Chào mừng bạn đến với FlightDot - nơi bạn có thể yên tâm đặt vé máy bay vô cùng nhanh chóng và tiện lợi, cùng với đội ngũ chăm sóc khách hàng tậm tâm, chu đáo.",
     "author": {
       "@type": "Person",
       "name": "Nguyễn Hoàng Trung - Phạm Lê Khánh Minh"
