--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
     "image": "https://flightdotclient.azurewebsites.net/assets/Icon/icons8-plane-material-rounded/icons8-plane-48.png"
   }
   </script>
-  
+  <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=66b5e1b4474255001913e500&product=inline-share-buttons' async='async'></script>
 
 <body class="mat-typography">
   <app-root></app-root>
