--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="canonical" href="" />
+  <link rel="canonical" href="https://flightdotclient.azurewebsites.net/booking-ticket-detail/thong-tin-chi-tiet-chuyen-bay-tu-hong-kong-den-anh-may-bay-metro-ngay-24-thang-08-nam-2024" />
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
