--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FlightDot - Đặt Vé Máy Bay Online - Nhanh Chóng, Tiện Lợi, Giá Tốt</title>
+  <!-- <title>FlightDot - Đặt Vé Máy Bay Online - Nhanh Chóng, Tiện Lợi, Giá Tốt</title> -->
   <base href="/">
   <meta name="google-site-verification" content="_QlkTsUqMuJjFGs_jt39URxSn5R6AM-txg_Oyrll3xw" />
-  <meta name="keywords" content="Đặt vé máy bay qua flightdot, FlightDot, flightdot booking, flightdot azure,minhkhanh,hoangtrung, flight." />
-  
-  <meta name="description" content="Website đặt vé máy bay - FlightDot tiện lợi và nhanh chóng, giúp bạn tìm kiếm, so sánh giá vé, và đặt chỗ chỉ trong vài bước đơn giản. Với giao diện thân thiện và hỗ trợ 24/7, chúng tôi mang đến trải nghiệm mua vé dễ dàng và an toàn cho mọi chuyến bay của bạn." />
+  <!-- <meta name="keywords" content="Đặt vé máy bay qua flightdot, FlightDot, flightdot booking, flightdot azure,minhkhanh,hoangtrung, flight." /> -->
+  <!-- <meta name="description" content="Website đặt vé máy bay - FlightDot tiện lợi và nhanh chóng, giúp bạn tìm kiếm, so sánh giá vé, và đặt chỗ chỉ trong vài bước đơn giản. Với giao diện thân thiện và hỗ trợ 24/7, chúng tôi mang đến trải nghiệm mua vé dễ dàng và an toàn cho mọi chuyến bay của bạn." /> -->
   <!-- <meta property="og:url" content="https://flightdotclient.azurewebsites.net/booking-ticket-detail/thong-tin-chi-tiet-chuyen-bay-tu-hong-kong-den-anh-may-bay-metro-ngay-24-thang-08-nam-2024" />
   <meta property="og:title" content="FlightDot - Đặt Vé Máy Bay Online - Nhanh Chóng, Tiện Lợi, Giá Tốt" />
   <meta property="og:description" content="Website đặt vé máy bay - FlightDot tiện lợi và nhanh chóng, giúp bạn tìm kiếm, so sánh giá vé, và đặt chỗ chỉ trong vài bước đơn giản. Với giao diện thân thiện và hỗ trợ 24/7, chúng tôi mang đến trải nghiệm mua vé dễ dàng và an toàn cho mọi chuyến bay của bạn." />
