--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="Đặt vé máy bay qua flightdot, FlightDot, flightdot booking, flightdot azure,minhkhanh,hoangtrung, flight." />
   <meta name="description" content="Website đặt vé máy bay - FlightDot tiện lợi và nhanh chóng, giúp bạn tìm kiếm, so sánh giá vé, và đặt chỗ chỉ trong vài bước đơn giản. Với giao diện thân thiện và hỗ trợ 24/7, chúng tôi mang đến trải nghiệm mua vé dễ dàng và an toàn cho mọi chuyến bay của bạn." /> -->
   <meta property="og:url" content="https://flightdotclient.azurewebsites.net/booking-ticket-detail/thong-tin-chi-tiet-chuyen-bay-tu-hong-kong-den-anh-may-bay-metro-ngay-24-thang-08-nam-2024" />
-  <meta property="og:title" content="FlightDot - Thông tin chi tiết chuyến bay từ Hồng Koong tới Anh vào ngày 24 tháng 8 năm 2024" />
+  <meta property="og:title" content="FlightDot - Thông tin chi tiết chuyến bay từ Hồng Kong tới Anh vào ngày 24 tháng 8 năm 2024" />
   <meta property="og:description" content="Website đặt vé máy bay - FlightDot tiện lợi và nhanh chóng, giúp bạn tìm kiếm, so sánh giá vé, và đặt chỗ chỉ trong vài bước đơn giản. Với giao diện thân thiện và hỗ trợ 24/7, chúng tôi mang đến trải nghiệm mua vé dễ dàng và an toàn cho mọi chuyến bay của bạn." />
   <meta property="og:image" content="https://i.imgur.com/iiPFSWE.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +16,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="canonical" href="https://flightdotclient.azurewebsites.net/booking-ticket-detail/thong-tin-chi-tiet-chuyen-bay-tu-hong-kong-den-anh-may-bay-metro-ngay-24-thang-08-nam-2024" /> -->
+  <link rel="canonical" href="https://flightdotclient.azurewebsites.net/booking-ticket-detail/thong-tin-chi-tiet-chuyen-bay-tu-hong-kong-den-anh-may-bay-metro-ngay-24-thang-08-nam-2024" /> 
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
